--- a/dao/src/test/resources/db.properties
+++ b/dao/src/test/resources/db.properties
@@ -1,3 +1,3 @@
-url=jdbc:mysql://localhost:3306/hotelreservTest?serverTimezone=UTC&logger=com.mysql.cj.log.StandardLogger&profileSQL=true
+url=jdbc:mysql://localhost:3306/hotelreservTest?serverTimezone=Europe/Moscow&logger=com.mysql.cj.log.StandardLogger&profileSQL=true
 user=root
 password=root
