--- a/dao/pom.xml
+++ b/dao/pom.xml
@@ -27,6 +27,16 @@
       <artifactId>mysql-connector-java</artifactId>
       <version>8.0.19</version>
     </dependency>
+    <dependency>
+      <groupId>com.zaxxer</groupId>
+      <artifactId>HikariCP</artifactId>
+      <version>3.4.5</version>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-orm</artifactId>
+      <version>5.2.6.RELEASE</version>
+    </dependency>
   </dependencies>
 
 </project>
