add converter DAO

--- a/dao/src/test/resources/db.properties
+++ b/dao/src/test/resources/db.properties
@@ -1,4 +1,4 @@
-url=jdbc:mysql://localhost:3306/hotelreservTest?serverTimezone=Europe/Moscow&logger=com.mysql.cj.log.StandardLogger&profileSQL=true
-user=root
-password=root
+#url=jdbc:mysql://localhost:3306/hotelreservTest?serverTimezone=Europe/Moscow&logger=com.mysql.cj.log.StandardLogger&profileSQL=true
+#user=root
+#password=root
 
