--- a/dao/src/main/resources/datasource.properties
+++ b/dao/src/main/resources/datasource.properties
@@ -1,4 +1,4 @@
 url=jdbc:mysql://localhost:3306/hotelreserv?serverTimezone=Europe/Moscow&logger=com.mysql.cj.log.StandardLogger&profileSQL=true
-username=root
+usernameSp=root
 password=root
 driver=com.mysql.cj.jdbc.Driver
