--- a/dao/src/main/resources/db.properties
+++ b/dao/src/main/resources/db.properties
@@ -1,3 +1,3 @@
-url=jdbc:mysql://localhost:3306/hotelreserv?serverTimezone=Europe/Moscow&logger=com.mysql.cj.log.StandardLogger&profileSQL=true
-user=root
-password=root
+#url=jdbc:mysql://localhost:3306/hotelreserv?serverTimezone=Europe/Moscow&logger=com.mysql.cj.log.StandardLogger&profileSQL=true
+#user=root
+#password=root
