--- a/dao/src/test/resources/datasource.properties
+++ b/dao/src/test/resources/datasource.properties
@@ -1,4 +1,9 @@
-url=jdbc:h2:mem:jpadb
-username=root
+url=jdbc:mysql://localhost:3306/hotelreservTest?serverTimezone=Europe/Moscow&logger=com.mysql.cj.log.StandardLogger&profileSQL=true
+usernameSp=root
 password=root
-driver=org.h2.Driver
+driver=com.mysql.cj.jdbc.Driver
+
+#url=jdbc:h2:mem:jpadb
+#usernameSp=root
+#password=root
+#driver=org.h2.Driver
