--- a/dao/src/test/resources/hibernate.properties
+++ b/dao/src/test/resources/hibernate.properties
@@ -1,4 +1,18 @@
-hibernate.dialect=org.hibernate.dialect.H2Dialect
-hibernate.hbm2ddl.auto=create-drop
+hibernate.hbm2ddl.auto=validate
 hibernate.use_sql_comments=false
 hibernate.show_sql=true
+
+hibernate.connection.pool_size=10
+hibernate.connection.isolation=2
+
+hibernate.cache.region.factory_class=org.hibernate.cache.ehcache.EhCacheRegionFactory
+hibernate.cache.use_second_level_cache=true
+hibernate.cache.use_query_cache=true
+hibernate.cache.auto_evict_collection_cache=true
+net.sf.ehcache.configurationResourceName=ehcache.xml
+
+
+#hibernate.dialect=org.hibernate.dialect.H2Dialect
+#hibernate.hbm2ddl.auto=crete-drop
+#hibernate.use_sql_comments=false
+#hibernate.show_sql=true
