--- a/pom.xml
+++ b/pom.xml
@@ -51,10 +51,10 @@
             <groupId>org.hibernate</groupId>
             <artifactId>hibernate-ehcache</artifactId>
         </dependency>
-      <dependency>
-        <groupId>hibernate</groupId>
-        <artifactId>hibernate-entitymanager</artifactId>
-      </dependency>
+<!--        <dependency>-->
+<!--            <groupId>hibernate</groupId>-->
+<!--            <artifactId>hibernate-entitymanager</artifactId>-->
+<!--        </dependency>-->
         <dependency>
             <groupId>com.h2database</groupId>
             <artifactId>h2</artifactId>
@@ -78,6 +78,10 @@
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-aop</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-orm</artifactId>
         </dependency>
 
     </dependencies>
@@ -125,18 +129,18 @@
             <dependency>
                 <groupId>org.hibernate</groupId>
                 <artifactId>hibernate-core</artifactId>
-                <version>5.4.15.Final</version>
+                <version>5.4.17.Final</version>
             </dependency>
             <dependency>
                 <groupId>org.hibernate</groupId>
                 <artifactId>hibernate-ehcache</artifactId>
-                <version>5.4.15.Final</version>
+                <version>5.4.17.Final</version>
             </dependency>
-          <dependency>
-            <groupId>hibernate</groupId>
-            <artifactId>hibernate-entitymanager</artifactId>
-            <version>3.4.0.GA</version>
-          </dependency>
+<!--            <dependency>-->
+<!--                <groupId>hibernate</groupId>-->
+<!--                <artifactId>hibernate-entitymanager</artifactId>-->
+<!--                <version>5.4.17.Final</version>-->
+<!--            </dependency>-->
             <dependency>
                 <groupId>com.h2database</groupId>
                 <artifactId>h2</artifactId>
@@ -163,11 +167,16 @@
                 <artifactId>spring-context</artifactId>
                 <version>5.2.6.RELEASE</version>
             </dependency>
-          <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-aop</artifactId>
-            <version>5.2.6.RELEASE</version>
-          </dependency>
+            <dependency>
+                <groupId>org.springframework</groupId>
+                <artifactId>spring-aop</artifactId>
+                <version>5.2.6.RELEASE</version>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework</groupId>
+                <artifactId>spring-orm</artifactId>
+                <version>5.2.6.RELEASE</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
