--- a/model/pom.xml
+++ b/model/pom.xml
@@ -6,7 +6,15 @@
 
   <artifactId>model</artifactId>
   <version>1.0-SNAPSHOT</version>
-  <packaging>jar</packaging>
+    <dependencies>
+        <dependency>
+            <groupId>org.jetbrains</groupId>
+            <artifactId>annotations</artifactId>
+            <version>RELEASE</version>
+            <scope>compile</scope>
+        </dependency>
+    </dependencies>
+    <packaging>jar</packaging>
   <name>model</name>
 
   <parent>
