--- a/web/pom.xml
+++ b/web/pom.xml
@@ -43,6 +43,18 @@
           <scope>compile</scope>
       </dependency>
 
+    <dependency>
+      <groupId>org.springframework.security</groupId>
+      <artifactId>spring-security-web</artifactId>
+      <version>5.2.5.RELEASE</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.springframework.security</groupId>
+      <artifactId>spring-security-taglibs</artifactId>
+      <version>5.2.5.RELEASE</version>
+    </dependency>
+
   </dependencies>
 
   <build>
